--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ body {
   background-position: center center;
   background-size: 100%;
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   justify-content: center;
 }
 .hero-btn{
