--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,7 @@ margin-right: 0;
 
 
 
-
+/*
 @media(max-width: 1440px){
   .service-card{
     height: 350px;
@@ -651,3 +651,4 @@ margin-right: 0;
     font-size: 20px;
   }
 }
+*/
