--- a/css/style.css
+++ b/css/style.css
@@ -629,12 +629,13 @@ margin-right: 0;
   .hero-btn{
     display: flex;
     flex-direction: column;
+    margin-top: 0px;
   }
   .btn-primary{
     margin-bottom: 10px;
   }
   .btn-text{
-    font-size: 18px;
+    font-size: 14px;
   }
 }
 @media (max-width: 500px){
@@ -643,6 +644,11 @@ margin-right: 0;
   }
   .project-image{
     height: 350px;
+  }
+  .maps{
+    margin-top: 20px;
+    width: 300px;
+    height: 300px;
   }
 }
 @media (max-width: 430px){
