--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ margin-right: 0;
   margin: 0;
 }
 .maps{  
-  border: 1px solid red;
+ /* border: 1px solid red; */
   width: 400px;
   height: 400px;
 }
